manifests/networking/gateway-api/canary/user-service-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: user-service
  namespace: ecom

spec:
  hosts:
    - user-service.ecom.svc.cluster.local

  http:

    - route:

        - destination:
            host: user-service.ecom.svc.cluster.local
            subset: v1
          weight: 90

        - destination:
            host: user-service.ecom.svc.cluster.local
            subset: v2
          weight: 10
